# test-autoevermation-harness

./: .gitignore  README.md
.claude-plugin/: marketplace.json
result_report/: README.md
result_report/docs/: PRINCIPLES_AUDIT.md  REPORT.md  VERIFICATION.md
result_report/sample-custom-components/: pom.xml
result_report/sample-spring-app/: build.gradle.kts
result_report/sample-spring-boot2/: build.gradle  pom.xml  settings.gradle
result_report/verification/: dryrun_boot2.py  dryrun_custom_components.py  dryrun_sample.py  verify_stdio.py
spring-test-harness-plugin/: .gitignore  .lsp.json  .mcp.json  CHANGELOG.md  DEPENDENCIES.md  README.md  RESEARCH_NOTES.md  settings.json
spring-test-harness-plugin/.claude-plugin/: plugin.json
spring-test-harness-plugin/agents/: ast-structure-analyzer.md  coverage-closer.md  mutation-analyst.md  refactor-advisor.md  scenario-conformance-verifier.md  scenario-generator.md  source-code-analyzer.md  spec-reviewer.md  test-code-generator.md  test-fixer.md  test-runner.md
spring-test-harness-plugin/docs/: GUIDE.md  pipeline-flow.md
spring-test-harness-plugin/hooks/: hooks.json
spring-test-harness-plugin/mcp/: build_test_server.py  pyproject.toml  repo_ast_server.py  requirements.txt  spec_doc_server.py
spring-test-harness-plugin/mcp/javaparser-cli/: README.md  pom.xml
spring-test-harness-plugin/mcp/javaparser-cli/src/main/java/com/example/harness/: AstCli.java
test-autoevermation-harness-plugin/: .gitignore  .lsp.json  .mcp.json  CHANGELOG.md  DEPENDENCIES.md  README.md  RESEARCH_NOTES.md  settings.json
(+140 files in other folders)
