[project]
name = "spring-test-harness-mcp"
version = "0.8.0"
description = "Spring 테스트 하네스용 MCP 서버 3종 (repo-ast / spec-doc / build-test). 공식 MCP Python SDK(FastMCP) 기반."
requires-python = ">=3.10"
dependencies = [
    # RESEARCH_NOTES §1
    "mcp[cli]>=1.2.0",
]

# repo-ast 서버의 JavaParser 백엔드는 별도 jar(mcp/javaparser-cli)로 빌드한다.
# jar가 없으면 순수 Python 정규식 fallback으로 동작한다(정확도 저하).

[project.scripts]
spring-harness-repo-ast = "repo_ast_server:main"
spring-harness-spec-doc = "spec_doc_server:main"
spring-harness-build-test = "build_test_server:main"

[tool.setuptools]
py-modules = ["repo_ast_server", "spec_doc_server", "build_test_server"]
